..F....PS. [ZBX-10076] fixed text information containing non-ASCII characters being saved incorrectly to IBM DB2 database in case of system locale misconfiguration (gleb, Oleg)
..F....... [ZBX-9989] optimized SQL queries for graphs building (Gunars, Sasha)

--------------------------------------------------------------------------------
Changes for 3.0.14rc1

New features:

Bug fixes:
........S. [ZBX-12971] fixed possibility of host availability being stuck in unknown state when monitoring though proxy (vso)
A.F....... [ZBX-12655] added filter on event details page to show messages sent to users only from same groups (gcalenko)
..F....... [ZBX-12856] fixed wrong default value for host filter when adding dependent trigger in trigger edit form (gcalenko)
........S. [ZBX-9567] added missing fields to webscenario data handling (valdis)
..F....... [ZBX-11051] fixed displaying highest severity when dashboard filter options contain unacknowledged only (Ivo)
...G...... [ZBX-10710] fixed CPU guest time utilization accounting in Linux (valdis)

--------------------------------------------------------------------------------
Changes for 3.0.13

3.0.13rc1 was released as 3.0.13 without any changes

--------------------------------------------------------------------------------
Changes for 3.0.13rc1

New features:
..F....... [ZBXNEXT-1421] added service sorting by name if multiple services has same 'sortorder' value (miks)
..F....... [ZBXNEXT-4081] improved error message for case when none of supported database modules exists (gcalenko)

Bug fixes:
..F....... [DEV-593] fixed multiple security issues (miks)
.......PS. [ZBX-12854] fixed crash of VMware collector with DebugLevel=4 (gleb)
...G...... [ZBX-11902] fixed CPU count for LPAR partitions in IBM AIX (abs)
...G...... [ZBX-12260] fixed windows agent to support UTF-16LE, UCS-2, UCS-2LE encodings (vso)