@@ -455,7 +455,13 @@ int	get_value_internal(DC_ITEM *item, AGENT_RESULT *result)
 		zbx_alarm_off();
 
 		if (SUCCEED != res)
+		{
+			tmp1 = get_rparam(&request, 2);
+			/* the default error code "NOTSUPPORTED" renders nodata() trigger function nonfunctional */
+			if (NULL != tmp1 && 0 == strcmp(tmp1, "ping"))
+				ret = GATEWAY_ERROR;
 			goto out;
+		}
 	}
 	else if (0 == strcmp(tmp, "process"))			/* zabbix["process",<type>,<mode>,<state>] */
 	{
